<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="212dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="213dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_home"
                android:layout_width="500dp"
                android:layout_height="190dp"
                android:layout_gravity="center"
                android:contentDescription="@string/icon_home"
                app:srcCompat="@drawable/fondo_menu" />

            <TextView
                android:id="@+id/nav_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/usuario_admin"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:onClick="ClickHome"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/menu_inicio"
            android:textColor="@color/black"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_pedido_compras"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:onClick="ClickPedidoCompras"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/menu_pedido_compras"
            android:textColor="@color/black"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_presupuesto_compras"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:onClick="ClickPresupuestoCompras"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/menu_presupuesto_compras"
            android:textColor="@color/black" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_mercaderias"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:onClick="ClickPaquete"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/menu_mercaderias"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_proveedores"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:onClick="ClickProveedores"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/menu_proveedores"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_empleados"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:onClick="ClickEmpleados"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/menu_empleados"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_ciudades"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:onClick="ClickCiudades"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/menu_ciudades"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_marcas"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:onClick="ClickCiudad"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/menu_marcas"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_usuarios"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:onClick="ClickAcerca"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/menu_usuarios"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_roles"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:onClick="ClickPerfil"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/menu_roles"
            android:textColor="@color/black" />

    </LinearLayout>

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:orientation="vertical">

    </LinearLayout>
    -->

    <LinearLayout
        android:id="@+id/menu_cerrar_sesion"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:onClick="ClickLogout"
        android:orientation="horizontal">
<!--
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_gravity="start"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:background="@color/black" />
-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/menu_cerrar_sesion"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>