<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.app_babilonia.login">


    <ImageView
        android:id="@+id/icon_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon_home"
        app:layout_constraintBottom_toTopOf="@+id/login_txt_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/fondo_menu" />

    <EditText
        android:id="@+id/login_txt_usuario"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="312dp"
        android:ems="10"
        android:hint="@string/login_usuario"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_txt_password"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_txt_usuario" />

    <Button
        android:id="@+id/bt_acceder"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/login_boton"
        android:onClick="IniciarSesion"
        android:text="@string/login_iniciar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_txt_password"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/bt_cancelar"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/login_boton"
        android:onClick="IniciarSesion"
        android:text="@string/login_cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_txt_password"
        tools:targetApi="lollipop" />


</androidx.constraintlayout.widget.ConstraintLayout>